<resources>
    <string name="app_name">My Reader\'s Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя Фамилия</string>
    <string name="nav_header_subtitle">читатель / ученик 3а 9 лет</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_list_of_books">Список книг</string>
    <string name="menu_temporary_fragment">Чтение(процесс)</string>
    <string name="menu_summary_statistics">Статистика</string>
    <string name="ImageView_contentDescription_book_cover">Изображение обложки книги</string>
    <string name="textView_book_title_plug">Наименование книги…</string>
    <string name="textView_authors_of_the_book_plug">Автор или авторы книги</string>
    <string name="textView_book_status_plug">Статус прочтения книги</string>
    <string name="ImageView_contentDescription_sign_of_approval">Иконкф-Флаг признак одобрения</string>
    <string name="menu_bookDetailsFragment">Информацция о книге</string>
    <string name="textView_book_details_stub">жанр / группа</string>
    <string name="textView_book_details_duration">1000 страниц</string>
    <string name="textView_book_details_rating">Одобрена папой</string>
    <string name="default_text_book_details_budget">Ориентировочное коичество 100000 слов</string>
    <string name="default_text_book_details_revenue">Средняя плотнотсь слов на страницу 250</string>
    <string name="default_text_book_details">Книга запланирована к прочтению в ближайшее время</string>
    <string name="main_settings_header">Основные настройки пользователя</string>
    <string name="approves_header">Разрешения для куратора</string>
    <string name="login_title">Ник - логин пользователя</string>
    <string name="reply_title">Одобрение событий и записей</string>
    <string name="view_the_list_of_books_title">Просмотр списка книг</string>
    <string name="view_the_list_of_books_on">Куратор (родитель) может просматривать мой список книг
    </string>
    <string name="view_the_list_of_books_off">Никто не может получить список книг кроме самого пользователя</string>
    <string name="edit_the_list_of_books_title">Изменение списка книг</string>
    <string name="edit_the_list_of_books_on">Куратор (родитель) может вносить изменения в мой список книг
    </string>
    <string name="edit_the_list_of_books_off">Никто не может вносить изменения, удалять и добавлять книги в мой список</string>
    <string name="settings_title">Общие настройки</string>
    <string name="name_title">Имя пользователя</string>
    <string name="surname_title">Фамилия</string>
    <string name="main_curator_title">Основной куратор</string>
    <string name="main_fragment_title">Мой дневник</string>
    <string name="menu_main">Главная</string>
    <string name="iv_userListItem_contentDescription">Рамочка вокруг аваатара</string>
    <string name="textView_event_title_plug">Выполнено такое-то действие</string>
    <string name="textView_fix_data_event_plug">" день нед. / 15.12.2021 (18:20)"</string>
    <string name="textView_event_body_plug">Описание события (коротко)</string>
    <string name="events_list_label">Список событий</string>
    <string name="create_new_book_label">Новая книга</string>
    <string name="edit_book_label">Редактирование информации</string>
    <string name="process_reading_book_label">Чтение книги…</string>
    <string name="menu_create_book_fragment">Создать новую запись (книги)</string>
    <string name="menu_edit_book_fragment">Редактировать запись (о книге)</string>
    <string name="menu_book_details_fragment">Подробная информация о книге</string>
    <string name="menu_events_list_fragment">Общий список событий</string>
    <string name="default_text_book_details_activity_graph_title">Активность чтения книги</string>
    <string name="default_text_book_details_activity_log_title">История чтения книги</string>
    <string name="text_view_process_reading_book_title">Наименование книги…</string>
    <string name="text_view_process_reading_book_authors">Автор или авторы книги</string>
    <string name="text_view_process_reading_pages_count">%s страниц</string>
    <string name="text_view_process_reading_book_words_count">Ориентировочное коичество %s слов</string>
    <string name="text_view_process_reading_book_density_words">Средняя плотнотсь слов на страницу %s</string>
    <string name="text_view_process_reading_book_current_page">%s / Закладка на странице %s</string>
    <string name="text_view_reading_control_title">Контроль чтения</string>
    <string name="text_view_process_reading_active_time_title">Время чтения:</string>
    <string name="text_view_process_reading_active_time_left_title">Время до перерыва:</string>
    <string name="text_view_process_reading_active_time_over_plan_title">Чтение сверх плана! Пора сделать перерыв!</string>
    <string name="text_view_process_reading_relax_time_title">Время отдыха:</string>
    <string name="text_view_process_reading_active_stopwatch_initial_value">00:00:00</string>
    <string name="text_view_process_reading_relax_stopwatch_initial_value">00:00:00</string>
    <string name="button_process_reading_start_text">Начать сеанс чтения</string>
    <string name="button_process_reading_stop_text">Окончить сеанс чтения</string>
    <string name="button_process_reading_resume_text">Продолжить чтение</string>
    <string name="button_process_reading_pause_text">Сделать паузу</string>
    <string name="dialog_process_reading_enter_bookmark_number">Введите текущий номер страницы</string>
    <string name="dialog_process_reading_button_enter_bookmark">OK</string>
    <string name="dialog_process_reading_error_less_than_last">Введенное значение должно быть не меньше, чем номер страницы предыдущего сеанса чтения</string>
    <string name="dialog_process_reading_error_more_than_pages_count">Введенное значение не должно превышать количества страниц в книге</string>
    <string name="dialog_process_reading_error_is_empty">Проверьте формат введенного значения. Введенное значение не должно быть пустым.</string>
    <string name="dialog_text_view_reading_results_title">Статистика чтения</string>
    <string name="text_view_reading_results_time">Время чтения составило: %s</string>
    <string name="text_view_reading_results_pages_count">Прочитано страниц: %s</string>
    <string name="text_view_reading_results_speed">Средняя скорость чтения: %s слов в минуту, %s страниц в минуту</string>
    <string name="button_reading_results_close">Закрыть</string>
    <string name="error_process_reading">Произошла ошибка\n%s</string>
    <string name="start_read_book_label">Приступить к чтению</string>
    <string name="spref_key_login">login</string>
    <string name="spref_key_login_default">\"\"</string>
    <string name="iv_new_book_cover_contentDescription_text">Ихображение обложки книги</string>
    <string name="btn_start_camera_text">Фотографировать обложку</string>
    <string name="btn_start_media_text">Выбрать из галереи</string>
    <string name="btn_crop_image_text">Подрезать</string>
    <string name="til_new_book_title_hint">Наименование книги</string>
    <string name="til_new_book_author_hint">Автор(ы) (Фамилия Имя Отчество)</string>
    <string name="til_new_book_number_of_pages_hint">Страниц</string>
    <string name="til_new_book_number_of_words_per_page_hint">Слов на странице</string>
    <string name="til_new_book_total_words_hint">Всего слов</string>
    <string name="btn_save_new_book_text">Сохранить основные данные</string>
    <string name="fab_base_contentDescription">Основное действие</string>
    <string name="fab_contentDescription">Основное действие</string>
    <string name="button_change_active_stopwatch_mode_text">Изменить режим таймера чтения</string>
    <string name="dialog_process_reading_button_back_to_reading">Вернуться к чтению</string>
    <string name="tv_body_book_description_default_text">Автор Имя Отчество: + описание книги, небольшое сколько прочиено, сколько осталось</string>
    <string name="tv_bool_name_default_text">Наименование книги</string>
    <string name="tv_book_item_title_header_default_text">ГГГГ / ММ / ДД - прочитано N стр.</string>
    <string name="iv_unknown_type_sign_content_description">Сигнал о неопознанном типе представления элемента списка</string>
    <string name="tv_unknown_type_title_default_text">ГГГГ / ДД / ММ - элемент ID такойто</string>
    <string name="tv_unknown_type_name_default_text">Неизвестный тип элемента списка</string>
    <string name="tv_unknown_type_body_default_text">Получен не поддерживаемы данным списком тип элемента</string>
    <string name="creator_separator_title_default_text">Добавлено мной / кемто</string>
    <string name="author_separator_full_name_default_text">Фамилия Имя отчество (автора)</string>
    <string name="author_separator_letter_default_text">A</string>
    <string name="group_separator_title_default_text">Наименование группы</string>
    <string name="iv_user_custom_bg_contentDescription">Пользовательский фон</string>
    <string name="tv_activity_graph_title_default_text">Ежедневная активность.</string>
    <string name="iv_DaCoin_icon_contentDescription">Иконка DACoin</string>
    <string name="tv_activity_DaCoin_count_default_text">12 345 678</string>
    <string name="tv_top_week_day_monday_title_text">Пн</string>
    <string name="tv_top_week_day_tuesday_title_text">Вт</string>
    <string name="tv_top_week_day_wednesday_title_text">Ср</string>
    <string name="tv_top_week_day_thursday_title_text">Чт</string>
    <string name="tv_top_week_day_friday_title_text">Пт</string>
    <string name="tv_top_week_day_saturday_title_text">Сб</string>
    <string name="tv_top_week_day_sunday_title_text">Вс</string>
    <string name="tv_top_week_count_title_text">№</string>
    <string name="tv_bottom_comment_title_text">Правила определения активности</string>
    <string name="tv_bottom_legend_less_title_text">Мало</string>
    <string name="tv_bottom_legend_more_title_text">Много</string>
    <string name="tv_header_title_default_text">Активность и достижения</string>
    <string name="tv_period_default_text">Декабрь 2021</string>
    <string name="tv_count_DACoin_title_text">Заработано DACoin</string>
    <string name="iv_DACoin_icon_contentDescription">Иконка DACoin</string>
    <string name="tv_DACoin_count_default_text">123 456</string>
    <string name="nav_list_of_books_contentDescription">Список книг с возможностью сортировки</string>
    <string name="nav_list_of_books_title">Список книг</string>
    <string name="nav_summary_statistics_contentDescription">Совокупная статистика пользовательской активности</string>
    <string name="nav_summary_statistics_title">Статистика пользователя</string>
    <string name="nav_settings_fragment_contentDescription">Настройки</string>
    <string name="nav_settings_fragment_title">Настройки</string>
    <string name="nav_authorization_user_contentDescription">переход к форме авторизации пользователя</string>
    <string name="nav_authorization_user_title">Авторизация пользователя</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_sign_in">Войти</string>
    <string name="nav_user_login_fragment_label">Авторизация пользователя</string>
    <string name="nav_user_registration_fragment_label">Регистрация нового пользователя</string>
    <string name="nav_users_list_fragment_label">Список связанных пользователей</string>
    <string name="nav_search_users_fragment_label">Поиск пользователя</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="prompt_login">UserLogin</string>
</resources>