<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/base_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_baseline_check_circle_outline_24"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_list_of_books"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_list_of_books" />
        <item
            android:id="@+id/nav_summary_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_summary_statistics" />
    </group>
    <group
        android:id="@+id/temp_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_new_book_Fragment"
            android:icon="@drawable/ic_baseline_check_circle_outline_24"
            android:title="@string/menu_create_book_fragment" />
        <item
            android:id="@+id/nav_edit_book_fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_edit_book_fragment" />
        <item
            android:id="@+id/nav_events_list_fragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_events_list_fragment" />
    </group>
</menu>